# lgcns-mlops-team3

./: README.md  pyproject.toml  service.py  train.py
artifacts/: model.pkl
data/storage/: bike_sharing_train_features.csv
mlruns/0/: meta.yaml
mlruns/523333031831737621/: meta.yaml
mlruns/523333031831737621/01b07ff554bb4409b1c4d8d4e57e9b02/: meta.yaml
mlruns/523333031831737621/08653a0003a340ea9400e9b507c8f67c/: meta.yaml
mlruns/523333031831737621/160026662d094e36b494bbbfefc5a065/: meta.yaml
mlruns/523333031831737621/1eda4bfef4cd4bf18ceb1c013e659d50/: meta.yaml
mlruns/523333031831737621/24bb72c3f66747aeb4d2637f44549844/: meta.yaml
mlruns/523333031831737621/2a5b3a37d5da49a191e698e6db6031f2/: meta.yaml
mlruns/523333031831737621/2c85adc0e4c14a769cee0fc2cc17dfca/: meta.yaml
mlruns/523333031831737621/2d22a0d91f6f4889812dc5f69e3fad45/: meta.yaml
mlruns/523333031831737621/3556cb6dbfd241508237da3f9face308/: meta.yaml
mlruns/523333031831737621/3eeeea7f5b3c41a38c4afb6e582bb6c8/: meta.yaml
mlruns/523333031831737621/5a77c9a3bbce4be4a06c500fe2c482b1/: meta.yaml
mlruns/523333031831737621/5f6061a07b6f4ff8983cb3d7323448fa/: meta.yaml
mlruns/523333031831737621/61168bb1c889463d8c2373dd83c1cd1f/: meta.yaml
mlruns/523333031831737621/64695b5730854e55bf49eaa1399635fc/: meta.yaml
mlruns/523333031831737621/67ce44b73c3d424aa4fcd1b922e217fa/: meta.yaml
mlruns/523333031831737621/6a07a4b5a0334266bddceed0b21d3e31/: meta.yaml
mlruns/523333031831737621/6c989431dd6f43d581e6ada527118557/: meta.yaml
(+274 files in other folders)
