[project]
name = "lgcns-mlops-team3"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jaeyoon Han", email = "otzslayer@gmail.com"},
    {name = "coalra78", email = "coalra78@naver.com"},
]
dependencies = [
    "bentoml>=1.2.6",
    "scikit-learn>=1.3.2",
    "pandas>=2.1.4",
    "numpy>=1.26.4",
    "mlflow>=2.11.1",
    "category-encoders>=2.6.3",
    "pydantic>=2.6.3",
    "deepchecks>=0.18.1",
    "joblib>=1.3.2",
    "rich>=13.7.1",
    "seaborn>=0.13.2",
]
requires-python = "==3.9.*"
license = {text = "MIT"}
readme = "README.md"


[project.optional-dependencies]
dev = [
    "matplotlib>=3.8.3",
    "pre-commit>=3.6.2",
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.9.0",
    "jupyter>=1.0.0",
    "pip>=24.2",
]
[tool.pdm]
distribution = false